...
        android:paddingBottom="20dp"
        android:paddingLeft="@dimen/vertical_margin"
        android:paddingRight="@dimen/vertical_margin"
        android:paddingTop="10dp">

        <ImageButton
            android:id="@+id/search_repositories_button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_marginLeft="5dp"
            android:layout_marginStart="5dp"
            android:background="?attr/selectableItemBackgroundBorderless"
            android:src="@drawable/ic_search_white_36dp"
            tools:ignore="ContentDescription" />

        <EditText
            android:id="@+id/user_name_input"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toLeftOf="@id/search_repositories_button"
            android:layout_toStartOf="@id/search_repositories_button"
            android:imeOptions="actionSearch"
            android:inputType="text"
...
